@@ -665,8 +665,6 @@ __ZN7WebCore27CSSComputedStyleDeclarationC1EN3WTF10PassRefPtrINS_4NodeEEEbRKNS1_
 __ZN7WebCore27DeviceOrientationClientMock14setOrientationEN3WTF10PassRefPtrINS_21DeviceOrientationDataEEE
 __ZN7WebCore27DeviceOrientationClientMockC1Ev
 __ZN7WebCore27startObservingCookieChangesEv
-__ZN7WebCore27NoExceptionAssertionCheckerC1EPKci
-__ZN7WebCore27NoExceptionAssertionCheckerD1Ev
 __ZN7WebCore28encodeWithURLEscapeSequencesERKN3WTF6StringE
 __ZN7WebCore28removeLanguageChangeObserverEPv
 __ZN7WebCore29isCharacterSmartReplaceExemptEib
@@ -2100,6 +2098,11 @@ __ZNK7WebCore7Element26fastAttributeLookupAllowedERKNS_13QualifiedNameE
 #if !LOG_DISABLED
 __ZN7WebCore36initializeLoggingChannelsIfNecessaryEv
 #endif // !LOG_DISABLED
+
+#if !ASSERT_DISABLED
+__ZN7WebCore27NoExceptionAssertionCheckerC1EPKci
+__ZN7WebCore27NoExceptionAssertionCheckerD1Ev
+#endif // !ASSERT_DISABLED
 
 #if !defined(NSGEOMETRY_TYPES_SAME_AS_CGGEOMETRY_TYPES) && !PLATFORM(IOS)
 __ZN7WebCore7IntSizeC1ERK7_NSSize
