@@ -1,3 +1,9 @@
+2012-10-31  Tim Horton  <timothy_horton@apple.com>
+
+        Unreviewed, attempt to fix the release build by not exporting symbols that aren't defined there.
+
+        * WebCore.exp.in:
+
 2012-10-31  Yury Semikhatsky  <yurys@chromium.org>
 
         Memory instrumentation: do not report memory occupied by objects referenced using client interfaces
